Fix community display name overflow. Fixes #390

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -207,6 +207,10 @@ hr {
   text-overflow: ellipsis;
 }
 
+.overflow-wrap-anywhere {
+  overflow-wrap: anywhere;
+}
+
 #app {
   display: flex;
   flex-direction: column;
